--- a/WinForm_EF_Code_First_Sample/WinForm_EF_Code_First_Sample.csproj
+++ b/WinForm_EF_Code_First_Sample/WinForm_EF_Code_First_Sample.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AmazingShop.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="formMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Product.cs" />
     <EmbeddedResource Include="formMain.resx">
       <DependentUpon>formMain.cs</DependentUpon>
     </EmbeddedResource>
