--- a/WinForm_EF_Code_First_Sample/WinForm_EF_Code_First_Sample.csproj
+++ b/WinForm_EF_Code_First_Sample/WinForm_EF_Code_First_Sample.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmazingShop.cs" />
-    <Compile Include="Category.cs" />
+    <Compile Include="Entities\Category.cs" />
     <Compile Include="formMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,7 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="Entities\Product.cs" />
     <EmbeddedResource Include="formMain.resx">
       <DependentUpon>formMain.cs</DependentUpon>
     </EmbeddedResource>
